--- a/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
@@ -48,7 +48,7 @@
             {% crispy form %}
 
             <div class="clearfix">
-                <button class="btn btn-ae-secondary pull-right"
+                <button class="btn btn-ae-secondary float-right"
                         type="submit">
                     {% trans "save" %}
                 </button>
