--- a/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
@@ -1,27 +1,34 @@
 {% load i18n static react_ratings idea_tags thumbnail rules %}
 
-<div class="row ideadetail-header">
-    <div class="ideadetail-image" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000), url({% if idea.idea_image %} {{ idea.idea_image|thumbnail_url:'ideadetailimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %});">
-        <div class="ideadetailheader-content">
-            <div class="col-md-9 col-sm-8 col-xs-12 ideadetailheader-left">
-                <div class="ideadetail-btn">
-                    <a href="{% url 'idea-sketch-list' %}" class="btn-back-to" role="button"><i class="fa fa-chevron-left" aria-hidden="true"></i> {% trans "Idea Space" %}</a>
-                </div>
-                <div class="ideadetail-title">
-                    <div class="ideadetail-category">
-                        {{ idea.all_idea_topics_names|join:", " }}
-                    </div>
-                    <h3>{{ idea.idea_title }} {% if idea.badge %}<span class="label idea_label {{ idea.badge|cut:" " }}">{{ idea.badge }}</span>{% endif %}</h3>
-                    {% if idea.idea_subtitle %}
-                        <h4 class="hidden-xs">
-                            {{ idea.idea_subtitle }}
-                        </h4>
-                    {% endif %}
-                </div>
+<div class="ideadetail-header row">
+    <div class="ideadetail-image d-flex flex-column justify-content-between px-3" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000), url({% if idea.idea_image %} {{ idea.idea_image|thumbnail_url:'ideadetailimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %});">
+
+        <!-- <div class="ideadetailheader-content"> -->
+
+        <div class="row">
+            <div class="col ideadetail-btn">
+                <a href="{% url 'idea-sketch-list' %}" class="bt btn-light btn-back-to" role="button"><i class="fa fa-chevron-left" aria-hidden="true"></i> {% trans "Idea Space" %}</a>
             </div>
+        </div>
+
+        <!-- <div class="col-md-9 ideadetailheader-left"> -->
+        <!-- <div class="row"> -->
+        <div class="row">
+            <div class="col-md-9 ideadetail-title">
+                <div class="ideadetail-category">
+                    {{ idea.all_idea_topics_names|join:", " }}
+                </div>
+                <h3>{{ idea.idea_title }} {% if idea.badge %}<span class="badge idea__badge {{ idea.badge|cut:" " }}">{{ idea.badge }}</span>{% endif %}</h3>
+                {% if idea.idea_subtitle %}
+                <h4 class="d-none d-md-block">
+                    {{ idea.idea_subtitle }}
+                </h4>
+                {% endif %}
+            </div>
+
             {% has_perm 'civic_europe_ideas.may_rate_idea' request.user idea as may_rate_idea %}
             {% if may_rate_idea and view.display_type == 'idea' %}
-            <div class="col-md-3 col-sm-4 hidden-xs ideadetailheader-right">
+            <div class="col-md-3 d-none d-md-block ideadetailheader-right mt-auto mb-3 pr-3">
                 {% react_supports idea False %}
             </div>
             {% endif %}
