--- a/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
@@ -4,7 +4,7 @@
         <a class="idealist-image hover-parent" href="{% url 'idea-detail' slug=idea.slug %}" tabindex="-1">
             <img class="hover-child-img" src="{% if idea.idea_image %} {{ idea.idea_image|thumbnail_url:'ideatileimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %}"/>
             {% if idea.badge %}
-            <span class="label idealist-label {{ idea.badge|cut:" " }}">{{ idea.badge }}</span>
+            <span class="badge idealist__badge {{ idea.badge|cut:" " }}">{{ idea.badge }}</span>
             {% endif %}
         </a>
         <div class="idealist-text">
@@ -23,7 +23,7 @@
     </div>
     <div class="idealist-footer">
         {{ idea.type }}
-        <span class="pull-right">
+        <span class="float-right">
             <i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ idea.created|date:"Y" }}
             <i class="far fa-heart" aria-hidden="true"></i> {{ idea.positive_rating_count }}
             <i class="far fa-comment" aria-hidden="true"></i> {{ idea.comment_count }}
