--- a/civic_europe/templates/account/login.html
+++ b/civic_europe/templates/account/login.html
@@ -20,7 +20,7 @@
     {% endif %}
 
     <div class="form-group">
-        <label class="control-label" for="{{ form.username.id_for_label }}">{% trans "E-mail" %}</label>
+        <label class="col-form-label" for="{{ form.username.id_for_label }}">{% trans "E-mail" %}</label>
         {% if form.login.errors %}
         {{ form.login|add_class:"form-control form-error" }}
         {% else %}
@@ -29,7 +29,7 @@
         {{ form.login.errors }}
     </div>
     <div class="form-group">
-        <label class="control-label" for="{{ form.password.id_for_label }}">{% trans "Password" %}</label>
+        <label class="col-form-label" for="{{ form.password.id_for_label }}">{% trans "Password" %}</label>
         {% if form.password.errors %}
         {{ form.password|add_class:"form-control form-error" }}
         {% else %}
