--- a/civic_europe/templates/account/password_set.html
+++ b/civic_europe/templates/account/password_set.html
@@ -24,14 +24,14 @@
         {% endif %}
 
         <div class="form-group">
-            <label class="control-label"
+            <label class="col-form-label"
                    for="{{ form.password1.id_for_label }}">{% trans "New password" %}</label>
             {{ form.password1.errors }}
             {{ form.password1|add_class:"form-control" }}
         </div>
 
         <div class="form-group">
-            <label class="control-label"
+            <label class="col-form-label"
                    for="{{ form.password2.id_for_label }}">{% trans "Repeat new password" %}</label>
             {{ form.password2.errors }}
             {{ form.password2|add_class:"form-control" }}
