--- a/civic_europe/templates/account/signup.html
+++ b/civic_europe/templates/account/signup.html
@@ -24,7 +24,7 @@
     {% endif %}
 
     <div class="form-group">
-        <label class="control-label" for="{{ form.username.id_for_label }}">{{  form.username.label }}</label>
+        <label class="col-form-label" for="{{ form.username.id_for_label }}">{{  form.username.label }}</label>
         {% if form.username.errors %}
         {{ form.username|add_class:"form-control form-error" }}
         {% else %}
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label" for="{{ form.email.id_for_label }}">{{  form.email.label }}</label>
+        <label class="col-form-label" for="{{ form.email.id_for_label }}">{{  form.email.label }}</label>
         {% if form.email.errors %}
         {{ form.email|add_class:"form-control form-error" }}
         {% else %}
@@ -44,7 +44,7 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label" for="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
+        <label class="col-form-label" for="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
         {% if form.password1.errors %}
         {{ form.password1|add_class:"form-control form-error" }}
         {% else %}
@@ -54,7 +54,7 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label" for="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
+        <label class="col-form-label" for="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
         {% if form.password2.errors %}
         {{ form.password2|add_class:"form-control form-error" }}
         {% else %}
@@ -63,13 +63,13 @@
         {{ form.password2.errors }}
     </div>
 
-    <div class="checkbox">
-        <label class="control-label" for="{{ form.get_newsletters.id_for_label }}">{{ form.get_newsletters }} {{ form.get_newsletters.label | safe }}</label>
+    <div class="form-check">
+        <label class="col-form-label" for="{{ form.get_newsletters.id_for_label }}">{{ form.get_newsletters }} {{ form.get_newsletters.label | safe }}</label>
         {{ form.get_newsletters.errors }}
     </div>
 
-    <div class="checkbox">
-        <label class="control-label" for="{{ form.terms_of_use.id_for_label }}">{{ form.terms_of_use }} {{ form.terms_of_use.label | safe }}</label>
+    <div class="form-check">
+        <label class="col-form-label" for="{{ form.terms_of_use.id_for_label }}">{{ form.terms_of_use }} {{ form.terms_of_use.label | safe }}</label>
         {{ form.terms_of_use.errors }}
     </div>
     <button type="submit" value="Register" class="btn btn-primary btn-wide">{% trans "register" %}</button>
