--- a/cms/blog/templates/cms_blog/includes/blog_index_featured_item.html
+++ b/cms/blog/templates/cms_blog/includes/blog_index_featured_item.html
@@ -15,15 +15,15 @@
                 <h4><a href="{% pageurl page.featured_page %}">{{ page.featured_page.title }}</a></h4>
             </div>
             <!--lg-->
-            <div class="blogindex-teaser hidden-md hidden-sm hidden-xs">
+            <div class="blogindex-teaser d-none d-lg-block">
                 {{ page.featured_page.teasertext|truncatechars:450 }}
             </div>
             <!--md and xs-->
-            <div class="blogindex-teaser hidden-lg hidden-sm">
+            <div class="blogindex-teaser d-sm-none d-md-block d-lg-none">
                 {{ page.featured_page.teasertext|truncatechars:300 }}
             </div>
             <!--sm-->
-            <div class="blogindex-teaser hidden-lg hidden-md hidden-xs">
+            <div class="blogindex-teaser d-none d-sm-block d-md-none">
                 {{ page.featured_page.teasertext|truncatechars:140 }}
             </div>
             <div class="blog-createdates">
