templates/cms_home: update classnames on homepage incl footer and error 500

--- a/civic_europe/templates/500.html
+++ b/civic_europe/templates/500.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="{% static 'adhcoracy4.css' %}">
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top" aria-label="{% trans 'main menu' %}">
-            <div class="container">
+        <nav class="navbar navbar-default fixed-top" aria-label="{% trans 'main menu' %}">
+            <div class="container px-0">
                 <a class="navbar-brand" href="/">
                     <img
                         class="navbar-brand-logo"
