--- a/civic_europe/templates/includes/footer.html
+++ b/civic_europe/templates/includes/footer.html
@@ -4,7 +4,7 @@
 <footer id="footer" class="footer">
     <nav class="navbar navbar-default">
         <div class="container">
-            <div class="pull-left">
+            <div class="float-left">
                 <ul class="nav navbar-nav">
                     {% if settings.cms_settings.SocialMediaSettings.facebook %}
                     <li><a href="{{ settings.cms_settings.SocialMediaSettings.facebook }}" target="_blank" class="footer-entry"><i class="fab fa-facebook" aria-hidden="true"></i> Facebook</a></li>
@@ -23,7 +23,7 @@
                     {% endif %}
                 </ul>
             </div>
-            <div class="pull-right">
+            <div class="float-right">
                 <ul class="nav navbar-nav">
                     {% for menuitem in footer_menu_items %}
                     <li><a href="{{ menuitem.url }}"class="footer-entry">{{ menuitem.menu_title }}</a></li>
