--- a/cms/home/templates/cms_home/simple_page.html
+++ b/cms/home/templates/cms_home/simple_page.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="container simple-page">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 offset-md-3">
             <h1>{{ page.title }}</h1>
             {% include_block page.body %}
         </div>
